--- a/package.json
+++ b/package.json
@@ -14,6 +14,27 @@
   "keywords": [],
   "author": "Chechulnikova Yuliya",
   "license": "ISC",
+  "devDependencies": {
+    "eslint": "^7.6.0",
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-plugin-import": "^2.22.0",
+    "nodemon": "^2.0.4"
+  },
+  "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
+    "celebrate": "^13.0.2",
+    "cookie-parser": "^1.4.5",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "express-winston": "^4.0.5",
+    "helmet": "^4.1.0",
+    "joi": "^17.2.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.10.0",
+    "validator": "^13.1.1",
+    "winston": "^3.3.3"
+  },
   "bugs": {
     "url": "https://github.com/yuliya-pavlova/news-explorer-api/issues"
   },
