--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "API with authorization on Node.js and Express.js for project news-explorer",
   "main": "app.js",
   "scripts": {
-    "dev": "NODE_ENV=development nodemon app.js",
-    "start": "NODE_ENV=production node app.js "
+    "dev": "nodemon app.js",
+    "start": "node app.js "
   },
   "repository": {
     "type": "git",
